Fix z-index header

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 /*Header*/
 header {
     position:        fixed;
-    z-index:         9999;
+    z-index:         99;
     left:            50%;
     display:         flex;
     justify-content: space-between;
